Sign-in currently in-progress

--- a/src/components/shared/Header.css
+++ b/src/components/shared/Header.css
@@ -10,12 +10,12 @@ img {
   margin: 1em;
 }
 
-#rit-logo {
+#rit {
   max-width: 8em;
   max-height: 8em;
 }
 
-#user-logo {
+#user {
   max-width: 3.5em;
   max-height: 3.5em;
 }
