--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,6 +4,12 @@
   flex-direction: column;
 }
 
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #reserve-button {
   display: block;
   margin-left: auto;
