--- a/src/components/shared/Header.css
+++ b/src/components/shared/Header.css
@@ -46,3 +46,12 @@
   font-family: inherit;
   font-size: inherit;
 }
+
+#sign-out-button {
+  width: 100%;
+}
+
+#sign-out-button:hover {
+  color: #f5f5f5;
+  background-color: #F76902;
+}
