--- a/src/components/reserve-page/reserve-page.css
+++ b/src/components/reserve-page/reserve-page.css
@@ -1,19 +1,45 @@
 .date-picker {
-  height: 45%;
+  height: 375px;
   border-color: grey;
   border-width: 4px;
   border-style: solid;
 }
 
-.reserve-table-holder {
+ .reserve-table-holder {
   padding: 0px;
   height: 90%;
+  width: 500px;
+  margin-right: 50px;
 }
 .reserve-table {
   padding: 0px;
   height: 99%;
   width: auto;
   overflow-x: auto;
+}
+
+.reserve-table-cell {
+  width: 100%;
+  height: 100%;
+
+  border-right-width: 1px;
+  border-right-color: black;
+  border-right-style: inset;
+}
+
+.image {
+  max-height: 550px;
+}
+
+.image-holder {
+  width: 550px;
+}
+.taken {
+  background-color: DarkGray;
+}
+
+.available {
+  background-color: YellowGreen;
 }
 
 .right-side-bar {
