--- a/src/components/reserve-page/reserve-page.css
+++ b/src/components/reserve-page/reserve-page.css
@@ -1,9 +1,53 @@
-.date-picker {
-  height: 375px;
-  border-color: grey;
-  border-width: 4px;
-  border-style: solid;
+/* Date Component */
+.date-picker-component {
+  height: 210px;
+  width: 200px;
+  margin-bottom: 5px;
+  border-radius: 10px;
+  border: 3px outset black;
 }
+
+.date-icon-holder {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.date-picker {
+  width: 100px;
+}
+
+/*Ammenities Component*/
+.ammenities-component {
+  height: 400px;
+  width: 200px;
+  margin-bottom: 5px;
+  border-radius: 10px;
+  border: 3px outset black;
+}
+
+.ammenities-list {
+  list-style:none;
+  font-size: 18px;
+  padding: 0px;
+}
+
+/* Submit Button */
+.submit-button {
+  width: 206px;
+  height: 115px;
+  margin-left: 3px;
+  background-color: orange;
+  font-size: 26px;
+}
+
+/* Button Section */
+.button-section {
+  width: 98%;
+  margin-right: 10px;
+}
+
 
  .reserve-table-holder {
   padding: 0px;
@@ -11,6 +55,8 @@
   width: 500px;
   margin-right: 50px;
 }
+
+
 .reserve-table {
   padding: 0px;
   height: 99%;
@@ -28,11 +74,7 @@
 }
 
 .image {
-  max-height: 550px;
-}
-
-.image-holder {
-  width: 550px;
+  max-height: 500px;
 }
 
 .taken {
@@ -53,3 +95,74 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+.center-text-holder {
+  text-align: center;
+}
+
+.search-icon-wrapper {
+  height: 100%;
+  width: 20px;
+  padding-left: 5px;
+  background-color: grey;
+  margin-top: 2px;
+  border-top-left-radius : 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.black-header {
+  color: white;
+  background-color: black;
+  margin: 0px;
+  text-align: center;
+}
+.float-right {
+  float: right;
+}
+/*
+
+ .reserve-table-holder {
+  padding: 0px;
+  height: 90%;
+  width: 500px;
+  margin-right: 50px;
+}
+
+.reserve-table {
+  padding: 0px;
+  height: 99%;
+  width: auto;
+  overflow-x: auto;
+}
+
+.reserve-table-cell {
+  width: 100%;
+  height: 100%;
+
+  border-right-width: 1px;
+  border-right-color: black;
+  border-right-style: inset;
+}
+
+.image {
+  max-height: 500px;
+}
+
+.taken {
+  background-color: DarkGray;
+}
+
+.selected {
+  background-color: Lime!important;
+}
+
+.available {
+  background-color: YellowGreen;
+}
+
+.right-side-bar {
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+} */
