--- a/src/components/reserve-page/reserve-page.css
+++ b/src/components/reserve-page/reserve-page.css
@@ -1,6 +1,6 @@
 /* Date Component */
 .date-picker-component {
-  height: 210px;
+  height: 260px;
   width: 200px;
   margin-bottom: 5px;
   border-radius: 10px;
@@ -11,16 +11,29 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: 20px;
+}
+
+.date-content-holder{
+  height: 150px;
 }
 
 .date-picker {
   width: 100px;
 }
 
+.recurring-wrapper {
+  margin-left: 17px;
+  margin-top: 10px;
+}
+
+h4 {
+  margin-bottom: 3px;
+  margin-left: 3px;
+}
+
 /*Ammenities Component*/
 .ammenities-component {
-  height: 400px;
+  height: 340px;
   width: 200px;
   margin-bottom: 5px;
   border-radius: 10px;
